--- a/public/static/index.html
+++ b/public/static/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four In One</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    hello world
+    <div class="container"></div>
 </body>
 </html>
