--- a/public/static/index.html
+++ b/public/static/index.html
@@ -5,8 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four In One</title>
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <header class="header">
+            <h1 class="title"><a href=""><b>4in1</b> Studio</a></h1>
+            <nav>
+                <ul class="menu">
+                    <li><a href="" class="menu_link">Anchor 1</a></li>
+                    <li><a href="" class="menu_link">Anchor 2</a></li>
+                    <li><a href="" class="menu_link">Anchor 3</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="members_container">
+            <div class="member">
+                <div class="member_info">
+                    <h1 class="member_name">Name</h1>
+                    <div class="scale">
+                        <div class="bar">
+                            <p class="bar_label">Label 1</p>
+                            <div class="bar_end" style="width: 20%;"></div>
+                        </div>
+                        <div class="bar">
+                            <p class="bar_label">Label 2</p>
+                            <div class="bar_end" style="width: 30%"></div>
+                        </div>
+                        <div class="bar">
+                            <p class="bar_label">Label 2</p>
+                            <div class="bar_end" style="width: 0%"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="member"></div>
+        </section>
+        <section class="members_container">
+            <div class="member"></div>
+            <div class="member"></div>
+        </section>
+    </div>
+
+    <script src="../scripts/index.js"></script>
 </body>
 </html>
