banner and quotes added

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,48 +8,84 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="title"><a href=""><b>4in1</b> Studio</a></h1>
-            <nav>
-                <ul class="menu">
-                    <li><a href="" class="menu_link">Anchor 1</a></li>
-                    <li><a href="" class="menu_link">Anchor 2</a></li>
-                    <li><a href="" class="menu_link">Anchor 3</a></li>
-                </ul>
-            </nav>
+            <div class="header_content">
+                <h1 class="title"><a href=""><b>4in1</b> Studio</a></h1>
+                <nav>
+                    <ul class="menu">
+                        <li><a href="" class="menu_link">Anchor 1</a></li>
+                        <li><a href="" class="menu_link">Anchor 2</a></li>
+                        <li><a href="" class="menu_link">Anchor 3</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header_line"></div>
         </header>
+        <div class="banner">
+            <div class="banner_text_container">
+                <p class="banner_text">Our best work happens when</p>
+                <p class="banner_text">we put our heads together and open</p>
+                <p class="banner_text">ourselves to fresh perspectives, because</p>
+                <p class="banner_text">finding solutions is not a solo-mission.</p>
+            </div>
+            <h1 class="banner_title"><span class="q gradient_text">"</span>Hungry for achievments</h1>
+        </div>
         <section class="members_container">
-            <div class="member">
-                <div class="member_info">
-                    <h1 class="member_name">Name</h1>
-                    <div class="scale">
-                        <div class="bar">
-                            <p class="bar_label">Label 1</p>
-                            <div class="bar_end" style="width: 20%;"></div>
-                        </div>
-                        <div class="bar">
-                            <p class="bar_label">Label 2</p>
-                            <div class="bar_end" style="width: 30%"></div>
-                        </div>
-                        <div class="bar">
-                            <p class="bar_label">Label 2</p>
-                            <div class="bar_end" style="width: 0%"></div>
+            <div class="member_content">
+                <div class="member">
+                    <div class="member_info">
+                        <h1 class="member_name">Name</h1>
+                        <div class="scale">
+                            <div class="bar">
+                                <p class="bar_label">Label 1</p>
+                                <div class="bar_end" style="width: 20%;"></div>
+                            </div>
+                            <div class="bar">
+                                <p class="bar_label">Label 2</p>
+                                <div class="bar_end" style="width: 30%"></div>
+                            </div>
+                            <div class="bar">
+                                <p class="bar_label">Label 2</p>
+                                <div class="bar_end" style="width: 0%"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <p class="member_label">CEO</p>
             </div>
-            <div class="member"></div>
+            <div class="member_content">
+                <div class="member"></div>
+                <p class="member_label">Developer</p>
+            </div>
+            <div class="member_content">
+                <div class="member"></div>
+                <p class="member_label">Data analyst</p>
+            </div>
+            <div class="member_content">
+                <div class="member"></div>
+                <p class="member_label">Product manager</p>
+            </div>
         </section>
-        <section class="members_container">
-            <div class="member"></div>
-            <div class="member"></div>
-        </section>
+        <div class="quote_container">
+            <div class="shadow">
+                <h1 class="quote_title">Belief we're built around:</h1>
+                <div class="quote_mark_container">
+                    <img src="../images/double-quotes.png" alt="" class="quote_mark">
+                </div>
+                <p class="quote"><b>Головне здоров'я</b></p>
+            </div>
+        </div>
+        <!-- <video src="../videos/IMG_0826.mp4" muted autoplay loop></video> -->
     </div>
 
     <script src="../scripts/index.js"></script>
 </body>
+
 </html>
