--- a/public/static/teamMember_Serhii.html
+++ b/public/static/teamMember_Serhii.html
@@ -40,7 +40,7 @@
             Engaging in the strategic and intellectually stimulating game of chess has become a source of immense joy and fascination for me, providing a platform to sharpen my analytical skills and strategic thinking.</p>
     </div>
     <div class="video-photo">
-        <img src="../images/chess.jpg" alt="Chess">
+        <img src="../images/tm_Serhii_chess.jpg" alt="Chess">
         <div class="video-text">
             <video class="video" src="../images/video_sir.mp4" type="video/mp4" autoplay loop muted>
                 Your browser does not support the video tag.
