main page finished

--- a/public/static/teamMember_Yurii.html
+++ b/public/static/teamMember_Yurii.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/styleTemplate_Serhii.css">
+    <link rel="stylesheet" href="../styles/styleTemplate_Yurii.css">
 </head>
 <body>
 <header class="header">
@@ -25,10 +25,10 @@
     <div class="header_line"></div>
 </header>
 <div class="main">
-    <img class="main_photo" src="../images/tm_sir.jpg" alt="Serhii">
+    <img class="main_photo" src="../images/yura1.jpeg" alt="Serhii">
     <div class="main_details">
-        <h1>Serhii</h1>
-        <h2>SOFTWARE DEVELOPER</h2>
+        <h1>Yurii</h1>
+        <h2>CHIEF EXECUTIVE OFFICER, CEO</h2>
         <p>Bekah is a front-end developer, and a big advocate for accessibility and performance on the web. With a previous career in events management, Bekah has a keen eye for detail and takes pride in crafting a polished user experience. When she’s not writing code, Bekah loves to travel and play video games, and one day plans to live up to her namesake and buy a farm. (E-I-E-I-O)
 
         </p>
@@ -42,7 +42,7 @@
     <div class="video-photo">
         <img src="../images/chess.jpg" alt="Chess">
         <div class="video-text">
-            <video class="video" src="../images/video_sir.mp4" type="video/mp4" autoplay loop muted>
+            <video class="video" src="../videos/video_sir.mp4" type="video/mp4" autoplay loop muted>
                 Your browser does not support the video tag.
             </video>
             <p>
