finish Borys, Kate and Serhii team members page

--- a/public/static/teamMember_Serhii.html
+++ b/public/static/teamMember_Serhii.html
@@ -16,41 +16,36 @@
         <h1 class="title"><a href=""><b>4in1</b> Studio</a></h1>
         <nav>
             <ul class="menu">
-                <li><a href="../static/teamMember_Serhii.html" class="menu_link">Anchor 1</a></li>
-                <li><a href="" class="menu_link">Anchor 2</a></li>
-                <li><a href="" class="menu_link">Anchor 3</a></li>
+                <li><a href="#main" class="menu_link">Main Info</a></li>
+                <li><a href="#hobby" class="menu_link">Hobby</a></li>
+                <li><a href="#personality" class="menu_link">Personality</a></li>
             </ul>
         </nav>
     </div>
     <div class="header_line"></div>
 </header>
-<div class="main">
+<div class="main" id="main">
     <img class="main_photo" src="../images/tm_sir.jpg" alt="Serhii">
     <div class="main_details">
         <h1>Serhii</h1>
         <h2>SOFTWARE DEVELOPER</h2>
-        <p>Bekah is a front-end developer, and a big advocate for accessibility and performance on the web. With a previous career in events management, Bekah has a keen eye for detail and takes pride in crafting a polished user experience. When she’s not writing code, Bekah loves to travel and play video games, and one day plans to live up to her namesake and buy a farm. (E-I-E-I-O)
-
+        <p>In the ever-evolving realm of software development, I am a relentlessly productive and analytical individual whose coding journey unfolded into a love affair with lines of code. From the very beginning, the intricate dance of logic and creativity mesmerized me, setting the stage for a passionate pursuit of innovation. As a software developer, my days are woven with the threads of efficiency, attention to detail, and a profound dedication to crafting solutions that transcend the ordinary. In this digital landscape, I am not merely a coder but a visionary architect, driven to shape the future of technology with precision and unwavering commitment.
         </p>
     </div>
 </div>
-<div class="video_container">
-    <div class="video_container_text">
-        <p>
+<div class="video_container" id="hobby">
+    <video class="video1" src="../videos/video_sir.mp4" type="video/mp4" autoplay loop muted>
+        Your browser does not support the video tag.
+    </video>
+        <div class="text1"><p>
             Engaging in the strategic and intellectually stimulating game of chess has become a source of immense joy and fascination for me, providing a platform to sharpen my analytical skills and strategic thinking.</p>
-    </div>
-    <div class="video-photo">
-        <img src="../images/tm_Serhii_chess.jpg" alt="Chess">
-        <div class="video-text">
-            <video class="video" src="../images/video_sir.mp4" type="video/mp4" autoplay loop muted>
-                Your browser does not support the video tag.
-            </video>
-            <p>
-                Engaging in the strategic and intellectually stimulating game of chess has become a source of immense joy and fascination for me, providing a platform to sharpen my analytical skills and strategic thinking.</p>
         </div>
-    </div>
+        <div class="text2"><p>
+            Journaling serves as my compass through the chaos of daily life, helping me organize my thoughts and set clear goals. The act of putting pen to paper not only boosts my productivity by providing a structured outlet for ideas but also acts as a therapeutic refuge, allowing me to unwind and reflect on the day's journey. In the intimate pages of my journal, I find both a strategic planner and a tranquil haven for self-discovery.</div>
+        <div class="text3">My motto is productivity</div>
+    <img class="photo1" src="../images/tm_Serhii_hobby.jpg" alt="Journaling">
 </div>
-<div class="personality-test">
+<div class="personality-test" id="personality">
     <div class="personality-test_icon-wrapper">
         <h4>My Personality</h4>
         <h3>Architect (INTJ-T)</h3>
