minor color fixes

--- a/public/static/teamMember_Borys.html
+++ b/public/static/teamMember_Borys.html
@@ -30,8 +30,11 @@
     <div class="main_details">
         <h1>Borys</h1>
         <h2>PRODUCT MANAGER</h2>
-        <p>Bekah is a front-end developer, and a big advocate for accessibility and performance on the web. With a previous career in events management, Bekah has a keen eye for detail and takes pride in crafting a polished user experience. When she’s not writing code, Bekah loves to travel and play video games, and one day plans to live up to her namesake and buy a farm. (E-I-E-I-O)
-        </p>
+        <p>Hey there! I'm Borys, your go-to Product Manager with a knack for getting things done. Whether it's a hectic Monday in October or any other day, I thrive on being a jack of all trades in the dynamic world of product development.
+
+            I approach challenges step by step, taking deep breaths when needed, and thinking both creatively and analytically—I guess you could say it's the Gemini in me. My colleagues know they can count on me for not just managing products, but also for understanding the bigger business picture.
+
+            I believe in calm leadership, effective communication, and driving innovation. I may not have fingers, but I've got the skills to make things happen. Let's make your product shine!</p>
     </div>
 </div>
 <div class="main-video-container" id="hobby">
@@ -61,27 +64,27 @@
         <div class="scale">
             <div class="bar">
                 <p class="bar_label1">Extraverted</p>
-                <div class="bar_end" style="right: calc(53% - 32px);"></div>
+                <div class="bar_end" style="right: calc(53% - 16px);"></div>
                 <p class="bar_label2">Introverted</p>
             </div>
             <div class="bar">
                 <p class="bar_label1">Intuitive</p>
-                <div class="bar_end" style="right: calc(63% - 32px);"></div>
+                <div class="bar_end" style="right: calc(63% - 16px);"></div>
                 <p class="bar_label2">Observant</p>
             </div>
             <div class="bar">
                 <p class="bar_label1">Thinking</p>
-                <div class="bar_end" style="right: calc(58% - 32px);"></div>
+                <div class="bar_end" style="right: calc(58% - 16px);"></div>
                 <p class="bar_label2">Feeling</p>
             </div>
             <div class="bar">
                 <p class="bar_label1">Judging</p>
-                <div class="bar_end" style="left: calc(53% - 32px);"></div>
+                <div class="bar_end" style="left: calc(53% - 16px);"></div>
                 <p class="bar_label2">Prospective</p>
             </div>
             <div class="bar">
                 <p class="bar_label1">Assertive</p>
-                <div class="bar_end" style="right: calc(58% - 32px);"></div>
+                <div class="bar_end" style="right: calc(58% - 16px);"></div>
                 <p class="bar_label2">Turbulent</p>
             </div>
         </div>
