--- a/public/static/index.html
+++ b/public/static/index.html
@@ -189,7 +189,7 @@
                 <p class="member_label">Developer</p>
             </div>
             <div class="member_content">
-                <a href="teamMember_Boris.html"><div class="member member4">
+                <a href="teamMember_Borys.html"><div class="member member4">
                     <div class="member_info">
                         <h1 class="member_name">Borys Boiko</h1>
                         <div class="scale">
