--- a/public/static/teamMember_Kate.html
+++ b/public/static/teamMember_Kate.html
@@ -13,12 +13,12 @@
 <body>
 <header class="header">
     <div class="header_content">
-        <h1 class="title"><a href=""><b>4in1</b> Studio</a></h1>
+        <h1 class="title"><a href="index.html"><b>4in1</b> Studio</a></h1>
         <nav>
             <ul class="menu">
-                <li><a href="#main" class="menu_link">Main Info</a></li>
-                <li><a href="#hobby" class="menu_link">Hobby</a></li>
-                <li><a href="#personality" class="menu_link">Personality</a></li>
+                <li><a class="menu_link" onclick="scrollToTop()">Main Info</a></li>
+                <li><a class="menu_link" onclick="scrollToSection('hobby')">Hobby</a></li>
+                <li><a class="menu_link" onclick="scrollToSection('personality')">Personality</a></li>
             </ul>
         </nav>
     </div>
@@ -105,6 +105,8 @@
         </div>
     </div>
 </div>
+
+<script src="../scripts/index.js"></script>
 
 </body>
 </html>
