--- a/public/static/teamMember_Kate.html
+++ b/public/static/teamMember_Kate.html
@@ -40,6 +40,10 @@
             With her innovative approach and attention to detail, Kate is redefining
             the intersection of technology and design in the digital landscape.
         </p>
+        <div class="socials">
+            <a href="https://www.linkedin.com/in/kateryna-serhiichuk-56128b285/" target="_blank"><img src="../images/linkedin.png" alt="" class="social_img"></a>
+            <a href="https://github.com/kserhiichuk" target="_blank"><img src="../images/github.png" alt="" class="social_img"></a>
+        </div>
     </div>
 </div>
 <div class="main-video-container" id="hobby">
