--- a/public/static/teamMember_Serhii.html
+++ b/public/static/teamMember_Serhii.html
@@ -43,6 +43,10 @@
                 landscape, Serhii is not merely a coder but a visionary architect, driven to shape the future of technology
                 with precision and unwavering commitment.
             </p>
+            <div class="socials">
+                <a href="https://www.linkedin.com/in/serhii-serhiienko-1ba03b293" target="_blank"><img src="../images/linkedin.png" alt="" class="social_img"></a>
+                <a href="https://github.com/s1rserg" target="_blank"><img src="../images/github.png" alt="" class="social_img"></a>
+            </div>
         </div>
     </div>
     <div class="video_container" id="hobby">
