--- a/public/static/teamMember_Yurii.html
+++ b/public/static/teamMember_Yurii.html
@@ -32,6 +32,11 @@
         <p>
             Experienced web-developer, who leads our team. Yurii's main benefit is responsibility, that is why he fits his position perfectly. He can motivate teammates to do their tasks as qualitive as possible. And when needed, help any member to cope with their task, thanks to his wide variety of skills. 
         </p>
+        <div class="socials">
+            <a href="https://www.linkedin.com/in/yura-yakymiv-b01380195/" target="_blank"><img src="../images/linkedin.png" alt="" class="social_img"></a>
+            <a href="https://github.com/YakymivY" target="_blank"><img src="../images/github.png" alt="" class="social_img"></a>
+            <a href="https://twitter.com/jakasha59" target="_blank"><img src="../images/twitter.png" alt="" class="social_img"></a>
+        </div>
     </div>
 </div>
 <div class="video_container" id="info">
