fix grids and bar_ends

--- a/public/static/teamMember_Serhii.html
+++ b/public/static/teamMember_Serhii.html
@@ -68,7 +68,7 @@
         </div>
       </div>
     </div>
-    <div class="video_container" id="hobby">
+    <div class="main-video-container" id="hobby">
       <div class="text1">
         <p>
           Engaging in the strategic and intellectually stimulating game of chess
