--- a/public/static/teamMember_Yurii.html
+++ b/public/static/teamMember_Yurii.html
@@ -35,7 +35,7 @@
       <div class="header_line"></div>
     </header>
     <div class="main" id="main">
-      <div class="main_photo"></div>
+      <img class="main_photo" src="../images/yura1.jpeg" alt="Yurii" />
       <div class="main_details">
         <h1>Yurii</h1>
         <h2>CHIEF EXECUTIVE OFFICER, CEO</h2>
@@ -69,16 +69,13 @@
           implement something majestic in this field." - he says.
         </p>
       </div>
-      <div class="video1">
-        <video
+      <video class="video1"
           src="../videos/tm_Yurii2.mp4"
           autoplay
           muted
           loop
-          class="first_video"
         ></video>
-        <video
-          class="video2"
+      <video class="video2"
           src="../videos/tm_Yurii1.mp4"
           type="video/mp4"
           autoplay
@@ -87,16 +84,13 @@
         >
           Your browser does not support the video tag.
         </video>
+      <div class="text2">
         <h1 class="quote">"Don't follow the crowd, the crowd is misleading"</h1>
-      </div>
-      <div class="bottom_text_container">
-        <p class="bottom_text">
           Yurii's passion for cars can not be overrated. He likes completely
           everything related to them. It is one of the ways Yura distracts from
           the computer and programming. He started with the first car in 18 and
           gathered other enthusiasts around him. It has even outgrew into the
           whole local community of unique auto lovers.
-        </p>
       </div>
     </div>
     <div class="personality-test" id="personality">
